New bug fix + SonarQube implementation